# spend-streamlet

./: .gitignore  README.md  app.py  main.ipynb  main.py  pyproject.toml
data/: spend_data_categorized.parquet
src/: functions.py  lookup_checkpoint.parquet  main.ipynb  spend.ipynb  tokens.py
tests/: test.py
