[project]
name = "spend-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastexcel>=0.18.0",
    "itables>=2.5.2",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "python-calamine>=0.6.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
